--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>회원가입</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
         <link rel="stylesheet" href="signup.css">
     </head>
     <body>
@@ -15,7 +16,7 @@
             </div>
         </header>
         <!-- 회원가입 입력폼 --> <!-- name 부분은 DB 필드이름하고 매치-->
-        <div>
+        <div class="signup">
             <form name="frm" id="frm" method="post" action="http://localhost:3010/signup"><!-- 데이터 넘길 곳을 액션 안에 넣기-->
                 <div class="write_base">
                     <!-- 아이디 -->
