--- a/signup.html
+++ b/signup.html
@@ -40,14 +40,14 @@
                             <label for="password2">
                                 <strong>비밀번호 확인</strong>
                             </label>
-                            <input type="password" name="password" id="password2" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호를 다시 한번 입력해주세요">    
+                            <input type="password" id="password2" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호를 다시 한번 입력해주세요">    
                         </div>
                         <!-- 이름 -->
                         <div class="item">
                             <label for="username">
                                 <strong>이름</strong>
                             </label>
-                            <input type="text" name="name" id="username" clsss="" maxlength="10" placeholder="이름을 입력해주세요">    
+                            <input type="text" name="name" id="username" clsss="" maxlength="10" autocomplete="off" placeholder="이름을 입력해주세요">    
                         </div>
                         <!-- 휴대폰 번호 -->
                         <div class="item">
@@ -55,7 +55,7 @@
                                 <strong>휴대폰</strong>
                             </label>
                             <div>
-                                <input type="text" name="phonenumber" id="phonenumber" clsss="" placeholder="휴대전화 번호('-'빼고 숫자만 입력)">    
+                                <input type="text" name="phonenumber" id="phonenumber" clsss="" autocomplete="off" placeholder="휴대전화 번호('-'빼고 숫자만 입력)">    
                                 <button>인증요청</button>
                             </div>
                             
@@ -65,7 +65,7 @@
                             <label for="email">
                                 <strong>이메일</strong>
                             </label>
-                            <input type="email" name="email" id="email" clsss="" maxlength="40" placeholder="이메일을 입력해주세요">    
+                            <input type="email" name="email" id="email" clsss="" maxlength="40" autocomplete="off" placeholder="이메일을 입력해주세요">    
                         </div>
                         <div class="join_agree">
                             <div class="join_input">
