디렉토리 정리

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruit-sw</title>
-    <link href="style_reset.css" rel="stylesheet" type="text/css">
-    <link href="style_mobile.css" rel="stylesheet" type="text/css">
-    <link href="style_pc.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style_mobile.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style_pc.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container">
