--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login</title>
-  <link href="style_reset.css" rel="stylesheet" type="text/css">
-  <link href="login.css" rel="stylesheet" type="text/css">
+  <link href="../styles/style_reset.css" rel="stylesheet" type="text/css">
+  <link href="../styles/login.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container">
