--- a/public/signup.html
+++ b/public/signup.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>회원가입</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-        <link rel="stylesheet" href="signup.css">
+        <link rel="stylesheet" href="../styles/signup.css">
     </head>
     <body>
         <div class="signin_container">
