--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruit-sw</title>
+
     <link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
     <link href="./styles/style_mobile.css" rel="stylesheet" type="text/css">
     <link href="./styles/style_pc.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <!-- SWIPER -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+
+    
+
 </head>
 <body>
   <div class="container">
@@ -41,11 +51,11 @@
     <!-- header end -->
     <main>
       <div class="main_wrap">
-        <button class="btn_toTop blind">맨위로</button>
-        <section class="visual">
+        <!-- <button class="btn_toTop blind">맨위로</button> -->
+        <!-- <section class="visual">
           <div class="visual_slider_wrap">
             <button class="blind">왼쪽화살표</button>
-            <ul class="visual_slider clearfix">
+            <div class="visual_slider clearfix">
               <li><a href="#">
                 <b>공고제목</b>
                 <p>기관명</p>
@@ -61,11 +71,52 @@
                 <p>기관명</p>
                 <i>채용기간</i>
               </a></li>
-            </ul>
+            </div>
             <button class="blind">오른쪽화살표</button>
           </div>
           <div class="btn_more">
             <a href="#">더 많은 채용공고 보러가기</a></div>
+        </section> -->
+        <section class="visual">
+            <div class="swiper-container visual_slider_wrap">
+                <div class="swiper-wrapper visual_slider">
+                    <div class="swiper-slide clearfix">
+                        <li>
+                            <a href="#">
+                                <b>공고제목</b>
+                                <p>기관명</p>
+                                <i>채용기간</i>
+                          </a>
+                        </li>
+                    </div>
+                    <div class="swiper-slide">
+                        <li><a href="#">
+                            <b>공고제목</b>
+                            <p>기관명</p>
+                            <i>채용기간</i>
+                          </a></li>
+                    </div>
+                    <div class="swiper-slide">
+                        <li><a href="#">
+                            <b>공고제목</b>
+                            <p>기관명</p>
+                            <i>채용기간</i>
+                          </a></li>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="swiper-prev">
+                <span class="material-symbols-outlined">arrow_back_ios</span>
+            </div>
+            <div class="swiper-next"><span class="material-symbols-outlined">
+                arrow_forward_ios
+                </span></div>
+
+            <div class="btn_more">
+                <a href="#">더 많은 채용공고 보러가기</a>
+            </div>
+
         </section>
         <section class="con1">
           <div class="con1_tit">
@@ -180,7 +231,7 @@
     </footer>  
     <!-- footer end -->
   </div>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script>
     $(document).ready(function(){
       $('.btn_toTop').click(function(){
@@ -262,6 +313,23 @@
 
   
   })
+  </script> -->
+
+  <script>
+    new Swiper('.swiper-container', {
+        slidesPerView: 3, // 한번에 보여줄 슬라이드 갯수
+        // spaceBetween: 1, // 슬라이드 사이 여백
+        centeredSlides: true, // 1번 슬라이드가 가운데 보이기
+        loop: true, // 반복 재생 여부
+        autoplay: {
+            delay: 3000
+        },
+        navigation: {
+            prevEl: ".swiper-prev",
+            nextEl: ".swiper-next"
+        },
+
+    });
   </script>
 
 </body>
