--- a/public/signup.html
+++ b/public/signup.html
@@ -87,5 +87,6 @@
             </div>
         </div>
         <script difer src="../js/signup.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </body>
 </html>
