--- a/public/signup.html
+++ b/public/signup.html
@@ -20,14 +20,14 @@
             </header>
             <!-- 회원가입 입력폼 --> <!-- name 부분은 DB 필드이름하고 매치-->
             <div class="signup">
-                <form name="frm" id="frm" method="post" action="http://localhost:3000/register"><!-- 데이터 넘길 곳을 액션 안에 넣기   -->
+                <form name="frm" id="frm" method="post" action="http://localhost:3000/register" onsubmit="return checkAll()"><!-- 데이터 넘길 곳을 액션 안에 넣기   -->
                     <div class="write_base">
                         <!-- 아이디 -->
                         <div class="item">
                             <label for="id">
                                 <strong>아이디</strong>
                             </label>
-                            <input type="text" name="id" id="id" clsss="" maxlength="20" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="아이디(4~20자리) 영문, 숫자만 사용해주세요" onchange="checkId()">
+                            <input type="text" name="id" id="id" clsss="" minlength="4" maxlength="20" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="아이디(4~20자리) 영문, 숫자만 사용해주세요" onchange="checkId()" required>
                             <div class="checkmsg" id="checkidmsg" style="display: none;"></div>
                         </div>
                         <!-- 비밀번호 -->
@@ -35,7 +35,7 @@
                             <label for="password1">
                                 <strong>비밀번호</strong>
                             </label>
-                            <input type="password" name="password" id="password1" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호(8~16자리) 영문 대소문자, 숫자, 특수문자 조합" onchange="checkPw1()">
+                            <input type="password" name="password" id="password1" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호(8~16자리) 영문 대소문자, 숫자, 특수문자 조합" onchange="checkPw1()" required>
                             <div class="checkmsg" id="checkpw1msg" style="display: none;"></div>
                         </div>
                         <!-- 비밀번호 확인 -->
@@ -43,7 +43,7 @@
                             <label for="password2">
                                 <strong>비밀번호 확인</strong>
                             </label>
-                            <input type="password" id="password2" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호를 다시 한번 입력해주세요" onchange="checkPw2()">
+                            <input type="password" id="password2" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호를 다시 한번 입력해주세요" onchange="checkPw2()" required>
                             <div class="checkmsg" id="checkpw2msg" style="display: none;"></div>
                         </div>
                         <!-- 이름 -->
@@ -51,7 +51,7 @@
                             <label for="username">
                                 <strong>이름</strong>
                             </label>
-                            <input type="text" name="name" id="username" clsss="" maxlength="10" autocomplete="off" placeholder="이름을 입력해주세요" onblur="checkNm()">
+                            <input type="text" name="name" id="username" clsss="" maxlength="10" autocomplete="off" placeholder="이름을 입력해주세요" onblur="checkNm()" required>
                             <div class="checkmsg" id="checknmmsg" style="display: none;"></div>
                         </div>
                         <!-- 휴대폰 번호 -->
@@ -60,8 +60,8 @@
                                 <strong>휴대폰</strong>
                             </label>
                             <div>
-                                <input type="text" name="phonenumber" id="phonenumber" clsss="" autocomplete="off" placeholder="휴대전화 번호('-'빼고 숫자만 입력)" onchange="checkPn()">    
-                                <button>인증요청</button>
+                                <input type="text" name="phonenumber" id="phonenumber" clsss="" autocomplete="off" placeholder="휴대전화 번호('-'빼고 숫자만 입력)" onchange="checkPn()" required>
+                                <button id="btn_phone" disabled="disabled">인증요청</button>
                             </div>
                             <div class="checkmsg" id="checkPnmsg" style="display: none;"></div>
                         </div>
@@ -70,7 +70,7 @@
                             <label for="email">
                                 <strong>이메일</strong>
                             </label>
-                            <input type="email" name="email" id="email" clsss="" maxlength="40" autocomplete="off" placeholder="이메일을 입력해주세요" onchange="checkEm()">
+                            <input type="email" name="email" id="email" clsss="" maxlength="40" autocomplete="off" placeholder="이메일을 입력해주세요" onchange="checkEm()" required>
                             <div class="checkmsg" id="checkEmmsg" style="display: none;"></div>
                         </div>
                     </div>
@@ -80,11 +80,11 @@
                             <label for="check_1">전체동의</label>
                         </div>
                         <div class="join_input join_input2">
-                            <input type="checkbox" id="check_2">
+                            <input type="checkbox" id="check_2" required>
                             <label for="check_2">(필수) 개인 회원 약관에 동의</label>
                         </div>
                         <div class="join_input join_input3">
-                            <input type="checkbox" id="check_3">
+                            <input type="checkbox" id="check_3" required>
                             <label for="check_3">(필수) 개인정보 수집 및 이용에 동의</label>
                         </div>
                         <div class="join_input join_input4">
@@ -101,16 +101,12 @@
                         </div>
                     </div>
                     <div class="btn_signup">
-                        <button type="submit" id="btnSubmit" class="">회원가입 완료</button>
+                        <button type="submit" id="btnSubmit" class="" disabled="disabled">회원가입 완료</button>
                     </div>
                 </form>
             </div>
         </div>
-<<<<<<< HEAD
         <script defer src="../js/signup.js"></script>
-=======
-        <script difer src="../js/signup.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
->>>>>>> main
     </body>
 </html>
