--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,7 @@
     <title>login</title>
     <link href="../styles/style_reset.css" rel="stylesheet" type="text/css">
     <link href="../styles/login.css" rel="stylesheet" type="text/css">
+    <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -20,7 +21,7 @@
             <button type="button" class="btn_login_tap_cor" id="login_corp" onclick="changeToCorp()">기업회원</button>
               <div class="login_box" id="form_login_user">
                 <div class="login_input_wrap">
-                  <form id="form_user" method="post" action="" onsubmit="">
+                  <form id="form_user" method="post" action="" onsubmit="return checkUser()">
                     <fieldset>
                       <input type="text" id="userid" placeholder="아이디를 입력하세요" required>
                       <input type="password" id="userpw" autocomplete="off" placeholder="비밀번호를 입력하세요" required>
@@ -44,11 +45,11 @@
               </div>
               <div class="login_box" id="form_login_corp" style="display: none;">
                 <div class="login_input_wrap">
-                  <form>
+                  <form id="form_corp" method="post" action="" onsubmit="">
                     <fieldset>
                       <input type="text" id="corpid" placeholder="기업아이디를 입력하세요" required>
                       <input type="password" id="corppw" autocomplete="off" placeholder="비밀번호를 입력하세요" required>
-                      <button>로그인</button>
+                      <button type="submit" class="" id="submit_corp" disabled="disabled">로그인</button>
                       <input type="checkbox" id="saveId" name="saveId">
                       <label for="saveId">아이디 저장</label>
                     </fieldset>
@@ -102,5 +103,6 @@
       </footer>
     </div>
     <script defer src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
