라우팅 정리

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
-    
-
 </head>
 <body>
   <div class="container">
@@ -43,7 +41,7 @@
           </ul>
           </div>
           <div>
-            <a href="#">로그인/회원가입</a>
+            <a href="/login">로그인/회원가입</a>
           </div>
         </nav>
       </div>
