--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-        <link rel="stylesheet" href="../styles/signup.css">
+        <link rel="stylesheet" href="./styles/signup.css">
 
     </head>
     <body>
@@ -125,7 +125,7 @@
                 </form>
             </div>
         </div>
-        <script defer src="../js/signup.js"></script>
+        <script defer src="./js/signup.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </body>
 </html>
