로그인 백단에서 유효성

--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
             <button type="button" class="btn_login_tap_cor" id="login_corp" onclick="changeToCorp()">기업회원</button>
               <div class="login_box" id="form_login_user">
                 <div class="login_input_wrap">
-                  <form id="form_user" method="post" action="/login" onsubmit="return chehcklogin(event)">
+                  <form id="form_user" method="post" action="/login">
                     <fieldset>
                       <input type="text" name="id" id="userid" placeholder="아이디를 입력하세요" required>
                       <input type="password" name="password" id="userpw" autocomplete="off" placeholder="비밀번호를 입력하세요" required>
