로그인 쿠키부여, 인증

--- a/public/main.html
+++ b/public/main.html
@@ -22,7 +22,7 @@
     <div class="modal"></div>
     <header>
       <div class="header_wrap">
-        <h1><a href="#"><span>사회복지</span><span>채용</span>플랫폼</a></h1>
+        <h1><a href="/"><span>사회복지</span><span>채용</span>플랫폼</a></h1>
         <button class="blind btn_ham">메뉴열기</button>
         <nav>
           <div class="clearfix">
@@ -40,9 +40,16 @@
             <li><a href="#">커뮤니티</a></li>
           </ul>
           </div>
-          <div>
-            <a href="/login">로그인/회원가입</a>
-          </div>
+            {% if user %}
+            <div>
+              <div>{{user}}님</div>
+              <a href="/logout">로그아웃</a>
+            </div>
+            {% else %}
+            <div>
+              <a href="/login">로그인/회원가입</a>
+            </div>
+            {% endif %}
         </nav>
       </div>
     </header>
@@ -215,7 +222,7 @@
         <div class="footer_bottom">
           <p>
             <span>회사명</span> 
-            <span>회사주소(서울특별시 ㅇㅇ구 ㅇㅇ로 ㅇㅇ길 00-00</span>
+            <span>회사주소(서울특별시 ㅇㅇ구 ㅇㅇ로 ㅇㅇ길 00-00)</span>
             <span>대표명: ㅇㅇㅇ</span>
             <span>사업자 등록번호: 123-435-325663</span>
           </p>
