--- a/public/main.html
+++ b/public/main.html
@@ -35,9 +35,9 @@
             </fieldset>
           </form>
           <ul>
-            <li><a href="#">채용공고</a></li>
+            <!-- <li><a href="#">채용공고</a></li> -->
             <li><a href="#">기관후기</a></li>
-            <li><a href="#">커뮤니티</a></li>
+            <!-- <li><a href="#">커뮤니티</a></li> -->
           </ul>
           </div>
             {% if user %}
