--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,7 @@
         <title>회원가입</title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+        <link rel="stylesheet" href="./styles/style_reset.css">
         <link rel="stylesheet" href="./styles/signup.css">
 
     </head>
