라우터 정리

--- a/public/signup.html
+++ b/public/signup.html
@@ -102,15 +102,15 @@
                         <div>정보보유기간</div>
                         <ul class="join_radio_ul">
                             <li>
-                                <input type="radio" name="radio1" id="input_radio1">
+                                <input type="radio" name="radio1" value="탈퇴시" id="input_radio1">
                                 <label for="input_radio1">탈퇴시</label>
                             </li>
                             <li>
-                                <input type="radio" name="radio1" id="input_radio2">
+                                <input type="radio" name="radio1" value="1년" id="input_radio2">
                                 <label for="input_radio2">1년</label>
                             </li>
                             <li>
-                                <input type="radio" name="radio1" id="input_radio3">
+                                <input type="radio" name="radio1" value="3년" id="input_radio3">
                                 <label for="input_radio3">3년</label>
                             </li>
                         </ul>
