--- a/public/login.html
+++ b/public/login.html
@@ -35,11 +35,11 @@
                 <div class="login_social_wrap">
                   <p>소셜계정으로 로그인</p>
                   <ul>
-                    <li><a href="#" class="screen_out">naver</a></li>
-                    <li><a href="#" class="screen_out">kakao</a></li>
-                    <li><a href="#" class="screen_out">google</a></li>
-                    <li><a href="#" class="screen_out">facebook</a></li>
-                    <li><a href="#" class="screen_out">apple</a></li>
+                    <li><a href="#" class="blind">naver</a></li>
+                    <li><a href="#" class="blind">kakao</a></li>
+                    <li><a href="#" class="blind">google</a></li>
+                    <li><a href="#" class="blind">facebook</a></li>
+                    <li><a href="#" class="blind">apple</a></li>
                   </ul>
                 </div>
               </div>
@@ -69,7 +69,7 @@
               </div> -->
           </div>
           <div class="ad_wrap">
-            <div class="ad">박스</div>
+            <div class="ad">광고배너</div>
             <div class="btn_signup"><a href="/signup">회원가입</a></div>
           </div>
         </div>      
