--- a/public/signup.html
+++ b/public/signup.html
@@ -26,54 +26,36 @@
                     <div class="write_base">
                         <!-- 아이디 -->
                         <div class="item">
-                            <label for="id">
-                                <strong>아이디</strong>
-                            </label>
-                            <input type="text" name="id" id="id" clsss="" minlength="4" maxlength="20" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="아이디(4~20자리) 영문, 숫자만 사용해주세요" onchange="checkId()" required>
+                            <label for="id">이메일(ID)</label>
+                            <input type="email" name="id" id="id" clsss="" maxlength="40" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="이메일(ID)를 입력해주세요." onchange="checkId()" required>
                             <div class="checkmsg" id="checkidmsg" style="display: none;"></div>
                         </div>
                         <!-- 비밀번호 -->
                         <div class="item">
-                            <label for="password1">
-                                <strong>비밀번호</strong>
-                            </label>
+                            <label for="password1">비밀번호</label>
                             <input type="password" name="password" id="password1" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호(8~16자리) 영문 대소문자, 숫자, 특수문자 조합" onchange="checkPw1()" required>
                             <div class="checkmsg" id="checkpw1msg" style="display: none;"></div>
                         </div>
                         <!-- 비밀번호 확인 -->
                         <div class="item">
-                            <label for="password2">
-                                <strong>비밀번호 확인</strong>
-                            </label>
+                            <label for="password2">비밀번호 확인</label>
                             <input type="password" id="password2" clsss="" maxlength="16" style="ime-mode:disabled" autocomplete="off" placeholder="비밀번호를 다시 한번 입력해주세요" onchange="checkPw2()" required>
                             <div class="checkmsg" id="checkpw2msg" style="display: none;"></div>
                         </div>
-                        <!-- 이름 -->
-                        <div class="item">
-                            <label for="username">
-                                <strong>이름</strong>
-                            </label>
-                            <input type="text" name="name" id="username" clsss="" maxlength="10" autocomplete="off" placeholder="이름을 입력해주세요" onblur="checkNm()" required>
-                            <div class="checkmsg" id="checknmmsg" style="display: none;"></div>
-                        </div>
                         <!-- 휴대폰 번호 -->
                         <div class="item">
-                            <label for="phonenumber">
-                                <strong>휴대폰</strong>
-                            </label>
+                            <label for="phonenumber">휴대폰</label>
                             <div>
                                 <input type="text" name="phonenumber" id="phonenumber" clsss="" autocomplete="off" placeholder="휴대전화 번호('-'빼고 숫자만 입력)" onchange="checkPn()" required>
                                 <button id="btn_phone" disabled="disabled">인증요청</button>
                             </div>
                             <div class="checkmsg" id="checkPnmsg" style="display: none;"></div>
                         </div>
-                        <!-- 이메일 -->
+                        <!-- 닉네임 -->
                         <div class="item">
-                            <label for="email">
-                                <strong>이메일</strong>
-                            </label>
-                            <input type="email" name="email" id="email" clsss="" maxlength="40" autocomplete="off" placeholder="이메일을 입력해주세요" onchange="checkEm()" required>
-                            <div class="checkmsg" id="checkEmmsg" style="display: none;"></div>
+                            <label for="nickname">닉네임</label>
+                            <input type="text" name="nickname" id="nickname" clsss="" minlength="2" maxlength="20" autocomplete="off" placeholder="닉네임을 입력해주세요" onblur="checkNm()" required>
+                            <div class="checkmsg" id="checknmmsg" style="display: none;"></div>
                         </div>
                     </div>
                     <div class="join_agree">
@@ -106,12 +88,12 @@
                                 <label for="input_radio1">탈퇴시</label>
                             </li>
                             <li>
-                                <input type="radio" name="radio1" value="1년" id="input_radio2">
-                                <label for="input_radio2">1년</label>
+                                <input type="radio" name="radio1" value="3년" id="input_radio2">
+                                <label for="input_radio2">3년</label>
                             </li>
                             <li>
-                                <input type="radio" name="radio1" value="3년" id="input_radio3">
-                                <label for="input_radio3">3년</label>
+                                <input type="radio" name="radio1" value="1년" id="input_radio3">
+                                <label for="input_radio3">1년</label>
                             </li>
                         </ul>
                     </div>
