리뷰페이지 작업중

--- a/public/review.html
+++ b/public/review.html
@@ -31,7 +31,46 @@
                 </div>
                 <button type="submit" class="btn_review">이 기관 리뷰하기</button>
             </div>
-            
+            <button class="btn_write"></button>
+            <div class="total_score">
+                <div class="total_score_corpname">기관명 리뷰</div>
+                <div class="total_score_main">
+                    <p>3.0</p>
+                    <div class="star_bg">
+                        <span style="width: 50%"></span>
+                    </div>
+                    <p>000개 리뷰</p>
+                </div>
+                <div class="total_score_detail">
+                    <div class="total_detail_star">
+                        <span>3.0</span>
+                        <span></span>
+                        <span>커리어 향상</span>
+                    </div>
+                    <div class="total_detail_star">
+                        <span>3.0</span>
+                        <span></span>
+                        <span>업무와 삶의 균형</span>
+                    </div>
+                    <div class="total_detail_star">
+                        <span>3.0</span>
+                        <span></span>
+                        <span>복리후생</span>
+                    </div>
+                    <div class="total_detail_star">
+                        <span>3.0</span>
+                        <span></span>
+                        <span>조직문화</span>
+                    </div>
+                    <div class="total_detail_star">
+                        <span>3.0</span>
+                        <span></span>
+                        <span>리더십</span>
+                    </div>
+
+                </div>
+
+            </div>
         </main>
     
     </div>
