--- a/public/review.html
+++ b/public/review.html
@@ -18,20 +18,33 @@
             </div>
         </header>
         <main>
-            <div class="div_line"></div>
-            <div class="corp_info">
-                <div class="corp_info_image">기업이미지</div>
-                <div class="corp_info_data">
-                    <div>
-                        <span>기관명</span>
-                        <span>기관 소재지</span>    
+            <div class="corp_info_wrap">
+                <div class="div_line"></div>
+                <div class="corp_info">
+                    <div class="corp_info_image">기업이미지</div>
+                    <div class="corp_info_data">
+                        <div>
+                            <span>기관명</span>
+                            <span>기관 소재지</span>    
+                        </div>
+                        <div>
+                            <div class="star_bg">
+                                <span style="width: 50%"></span>
+                            </div>
+                            <span>3.0</span>
+                            <span>(000개 리뷰)</span>
+                        </div>
+                        <ul class="hashtag_top">
+                            <li>#해시태그1</li>
+                            <li>#해시태그2</li>
+                            <li>#해시태그3</li>
+                            <li>#해시태그4</li>
+                        </ul>
                     </div>
-                    <div>별점 위치</div>
-                    <div class="hashtag_top">해시태그 해시태그 해시태그 해시태그</div>
+                    <button type="submit" class="btn_review">이 기관 리뷰하기</button>
                 </div>
-                <button type="submit" class="btn_review">이 기관 리뷰하기</button>
+                <button class="btn_write"></button>    
             </div>
-            <button class="btn_write"></button>
             <div class="total_score">
                 <div class="total_score_corpname">기관명 리뷰</div>
                 <div class="total_score_main">
