반응형 작업

--- a/public/review.html
+++ b/public/review.html
@@ -147,11 +147,14 @@
 									휴가라는 개념도 없고 출퇴근 시간이 대체적으로 늦어서 일반적인 직장생활 느낌이 아니다.
 							</p>
 						</div>
-						<div class="comment_hashtag">
-							<span>#역에서 가까운</span>
-							<span>#중식제공</span>
-							<span>#유연근무제</span>
-							<span>#휴가눈치안봄</span>
+						<div class="comment_hashtag_wrap">
+							<div class="hashtag_fade"></div>
+							<div class="comment_hashtag">
+								<span>#역에서 가까운</span>
+								<span>#중식제공</span>
+								<span>#유연근무제</span>
+								<span>#휴가눈치안봄</span>
+							</div>	
 						</div>
 						<button class="comment_like">
 							<span></span>
@@ -222,11 +225,14 @@
 									휴가라는 개념도 없고 출퇴근 시간이 대체적으로 늦어서 일반적인 직장생활 느낌이 아니다.
 							</p>
 						</div>
-						<div class="comment_hashtag">
-							<span>#역에서 가까운</span>
-							<span>#중식제공</span>
-							<span>#유연근무제</span>
-							<span>#휴가눈치안봄</span>
+						<div class="comment_hashtag_wrap">
+							<div class="hashtag_fade"></div>
+							<div class="comment_hashtag">
+								<span>#역에서 가까운</span>
+								<span>#중식제공</span>
+								<span>#유연근무제</span>
+								<span>#휴가눈치안봄</span>
+							</div>	
 						</div>
 						<button class="comment_like">
 							<span></span>
