signup 반응형 수정

--- a/public/signup.html
+++ b/public/signup.html
@@ -5,11 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>회원가입</title>
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="./styles/style_reset.css">
         <link rel="stylesheet" href="./styles/signup.css">
-
     </head>
     <body>
         <div class="signin_container">
@@ -59,23 +57,23 @@
                         </div>
                     </div>
                     <div class="join_agree">
-                        <div class="join_input">
+                        <div class="join_input_all">
                             <input type="checkbox" id="check_1" onclick="checkBox1()">
                             <label for="check_1">전체동의</label>
                         </div>
-                        <div class="join_input join_input2">
+                        <div class="join_input">
                             <input type="checkbox" name= "check_2" id="check_2" required>
                             <label for="check_2">(필수) 개인 회원 약관에 동의</label><span class="material-symbols-outlined">arrow_forward_ios</span>
                         </div>
-                        <div class="join_input join_input3">
+                        <div class="join_input">
                             <input type="checkbox" name= "check_3" id="check_3" required>
                             <label for="check_3">(필수) 개인정보 수집 및 이용에 동의</label><span class="material-symbols-outlined">arrow_forward_ios</span>
                         </div>
-                        <div class="join_input join_input4">
+                        <div class="join_input join_input2">
                             <input type="checkbox" name= "check_4" id="check_4">
                             <label for="check_4">(선택) 마케팅 정보 수신 동의 - 이메일</label><span class="material-symbols-outlined">arrow_forward_ios</span>
                         </div>
-                        <div class="join_input join_input5">
+                        <div class="join_input join_input2">
                             <input type="checkbox" name= "check_5" id="check_5">
                             <label for="check_5">(선택) 마케팅 정보 수신 동의 - SMS/MMS</label><span class="material-symbols-outlined">arrow_forward_ios</span>
                         </div>
