review_write 작업중

--- a/public/review.html
+++ b/public/review.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<!-- 모달 작업 보류 -->
-		<!-- <form class="modal">
+		<form class="modal" style="display: none;">
 			<div>기업리뷰 작성</div>
 			<div class="modal_page" style="display: none;">
 				<div><div style="width: 33.3%;"></div></div>
@@ -82,7 +82,7 @@
 					<button>다음</button>	
 				</div>
 			</div>
-		</form> -->
+		</form>
 		<header>
 			<div class="header_wrap">
 				<h1><a href="/">NeedU</a></h1>
@@ -115,7 +115,8 @@
 					</div>
 					<button type="submit" class="btn_review">이 기관 리뷰하기</button>
 				</div>
-				<button class="btn_write"></button>    
+				<button class="btn_write"></button>
+				<button class="btn_toTop"></button>    
 			</div>
 			<div class="contents_wrap">
 				<div class="contents_main">
@@ -374,7 +375,6 @@
 				</div>
 			</div>
 		</main>
-
 	</div>
 	<script defer src="./js/review.js"></script>
 </body>
