--- a/public/header.html
+++ b/public/header.html
@@ -7,36 +7,84 @@
   <title>NeedU</title>
   <link href="styles/style_reset.css" rel="stylesheet">
   <link href="styles/style_header.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
   <div class="container">
+    <div class="modal"></div>
     <header>
       <h1 class="blind"><a href="#">logo</a></h1>
       <div class="nav_wrap">
-        <nav>
-          <div class="btn_ham_gnb blind"> 메뉴버튼
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-          <div class="gnb_search">
-            <form>
-              <label for="search" class="screen_out">검색</label>
-              <input type="search" name="search" class="search_text">
-              <input type="submit" value="검색" class="blind btn_search">
-            </form>
+        <div class="btn_ham_gnb blind"> 메뉴버튼
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <nav>          
+          <div class="gnb_wrap">
+            <div class="gnb_search">
+              <form>
+                <label for="search" class="screen_out">검색</label>
+                <input type="search" name="search" id="search" class="search_text" placeholder="검색어를 입력하세요">
+
+                <label for="btn_search" class="screen_out">검색버튼</label>
+                <input type="submit" 
+                id="btn_search" name="btn_search" value="검색" class="blind btn_search">
+              </form>
+            </div>
+            <ul class="gnb">
+              <li><a href="#">기업리뷰</a></li>
+              <li><a href="#">리뷰작성</a></li>
+            </ul>
           </div>
           <div class="usersign">
             <a href="#">로그인</a>
             <a href="#">회원가입</a>
           </div>
-          <ul class="gnb">
-            <li><a href="#">기업리뷰</a></li>
-            <li><a href="#">리뷰작성</a></li>
-          </ul>
         </nav>
       </div>
     </header>
   </div>
+  <script>
+    $(document).ready(function(){
+      
+      n = 0;
+      $('.btn_ham_gnb').click(function(){
+        n++;
+        if(n%2 == 1){
+        $('.modal').css('display','block');
+        $('nav').css('display','block');
+        // $('h1').css('display','none')
+      } else{
+        $('.modal').css('display','none');
+        $('nav').css('display','none');
+        // $('h1').css('display','block')
+      }
+      })
+
+      let win_width = $(window).width();
+      if(win_width >= 768){
+        i = 0;
+        $('.btn_search').click(function(){
+          i++;
+          if(i%2 == 1){
+          $('.search_text').css('display','block');
+          $('.gnb_search>form').css('border-bottom','1px solid #000dff')
+          } else{
+          $('.search_text').css('display','none');
+          $('.gnb_search>form').css('border','none')
+          }
+        })
+      $(window).resize(function(){
+        let win_resize = $(window).width();
+          if(win_resize > 767){
+            $('h1').css('display','block !important')
+      }
+      console.log(win_resize)
+      })
+      }
+
+    })
+  </script>
 </body>
 </html>
