--- a/public/header.html
+++ b/public/header.html
@@ -74,6 +74,7 @@
           $('.search_text').css('display','none');
           $('.gnb_search>form').css('border','none')
           }
+          return false;
         })
       $(window).resize(function(){
         let win_resize = $(window).width();
